[tool.poetry]
name = "postpanda_helper"
version = "0.1.1"
description = "Various helpers for Postgres and Pandas, including SelectSert"
authors = ["Daniel Sullivan <57496265+ds-mn@users.noreply.github.com>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.15"
pandas = "^1.2"
SQLAlchemy = "^1.3"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
black = {version = "^20",allow-prereleases = true, optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''