[tool.poetry]
name = "postpanda_helper"
version = "1.1.3"
description = "Various helpers for Postgres and Pandas, including SelectSert"
authors = ["Daniel Sullivan <57496265+ds-mn@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/ds-mn/postpanda_helper"
documentation = "https://ds-mn.github.io/postpanda_helper/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.15"
pandas = "^1.1"
SQLAlchemy = "^1.3"
logger-mixin = "^1.1.0"
pathvalidate = "^2.3.2"
GeoAlchemy2 = { version = ">=0.8.4,<0.13.0", optional = true }
geopandas = { version = "^0.9.0", optional = true }
PyYAML = "^5.3"

[tool.poetry.dependencies.psycopg2]
version = "^2.8"
markers = "platform_python_implementation == 'CPython'"

[tool.poetry.dependencies.psycopg2cffi]
git = "https://github.com/chtd/psycopg2cffi.git"
markers = "platform_python_implementation == 'PyPy'"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5"
sphinx-rtd-theme = "^0.5"

[tool.poetry.extras]
geo = ["GeoAlchemy2", "geopandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
